dark mode minor fix

--- a/css/index.css
+++ b/css/index.css
@@ -151,13 +151,14 @@ img {
 	color: white;
 	font-size: 35px; 
 	text-align: center;
-	padding: 14px 16px; 
+	padding: 10px; 
 	text-decoration: none;
+	margin-left: 15px;
 }
 
 .fa-moon-o:visited{
   display: block;
-  font-size: 60px;
+  font-size: 35px;
   color: white; 
   background-color: #333;
   padding: 20px;
